# rust_library_template

./: .gitlab-ci.yml  .rustfmt.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  cargo-generate.toml  cliff.toml
benches/: README.md
docs/: README.md
examples/: README.md
src/: error.rs  lib.rs
tests/: README.md
